--- a/build_files/MANIFEST.in
+++ b/build_files/MANIFEST.in
@@ -1,4 +1,4 @@
 include LICENSE
 include README.md
-recursive-include django_config/docs/*
-recursive-include django_config/build_files/*
+recursive-include django_config/docs *
+recursive-include django_config/build_files *
